# consultation_nlp

./: .env  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  Dockerfile  LICENSE  README.md  ci.yml  requirements.txt  setup.cfg  streamlit_app.py
.devcontainer/: Dockerfile  devcontainer.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: CodeCov.yml
docs/: conf.py
docs/aqa/: aqa_plan.md  assumptions_caveats.md  data_log.md
docs/contributor_guide/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  writing_sphinx_documentation.md
docs/user_guide/: README.md
src/: config.yaml  general.yaml  models.yaml  question_config.yaml  run_pipeline.py  spelling.json
src/consultation_nlp_2023/: run_pipeline.py
src/example_modules/: run_pipeline.py
src/modules/: analysis.py  clean_string.py  config.py  named_entity_recognition.py  preprocessing.py  quality_checks.py  responses_summary  responses_summary.py  spell_correct.py  streamlit.py  style.css  topic_modelling.py  utils.py  visualisation.py  word_cloud.py  word_counts.py
src/processing/: preprocessing.py  visualisation.py
src/processing_modules/: preprocessing.py
tests/: test_example_module.py
tests/modules/: test_analysis.py  test_clean_string.py  test_config.py  test_named_entity_recognition.py  test_preprocessing.py  test_quality_checks.py  test_spell_correct.py  test_streamlit.py  test_topic_modelling.py  test_utils.py  test_visualisation.py
tests/processing/: test_preprocessing.py
